--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Pavel Arnold <hukumka212@gmail.com>"]
 
 [dependencies]
+log = "0.4.0"
+env_logger = "0.5.10"
 lazy_static = "1.0"
 hamt-rs = "0.3.0"
 clap = "2.31.2"
