--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ rust:
 before_script:
   - rustup component add clippy-preview
 script:
+  - cargo fmt --all -- --check
   - cargo clippy -- -D warnings
   - cargo test --verbose --all
