--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rust:
   - nightly
 before_script:
   - rustup component add clippy-preview
+  - rustup component add rustfmt-preview
 script:
   - cargo fmt --all -- --check
   - cargo clippy -- -D warnings
