--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ cache: cargo
 rust:
   - nightly
 before_script:
+  - rustup update
   - rustup component add clippy-preview
   - rustup component add rustfmt-preview
 script:
