--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ cache: cargo
 rust:
   - nightly
 before_script:
-  - rustup component add clippy-preview
-  - rustup component add rustfmt-preview
+  - rustup component add clippy
+  - rustup component add rustfmt
 script:
   - cargo fmt --all -- --check
   - cargo clippy -- -D warnings
